# jiuwenclaw

./: .gitignore  MANIFEST.in  OPEN_SOURCE_SOFTWARE_NOTICE.md  README.md  build.ps1  build.sh  pyproject.toml
config/: config.yaml
docs/: 心跳.md  快速开始.md  技能.md  智能体.md  浏览器.md  聊天.md  记忆.md  配置信息.md  频道.md
jiuwenclaw/: app.py  app_web.py  config.py  init_workspace.py  package-lock.json  package.json  paths.py  start_services.py
jiuwenclaw/agentserver/: interface.py  prompt_builder.py  react_agent.py  skill_manager.py
jiuwenclaw/agentserver/memory/: __init__.py  compaction.py  config.py  embeddings.py  manager.py  summarizer.py
jiuwenclaw/agentserver/tools/: __init__.py  browser_start_client.py  browser_tools.py  command_tools.py  memory_tools.py  todo_toolkits.py
jiuwenclaw/agentserver/tools/browser-move/: .gitignore  README.md  pyproject.toml  requirements.freeze.txt
jiuwenclaw/agentserver/tools/browser-move/src/: playwright_runtime_mcp_server.py
jiuwenclaw/agentserver/tools/browser-move/src/openjiuwen_patch_sources/openjiuwen/agent_evolving/optimizer/tool/utils/: customized_eval.py  customized_reviewer.py  description_example_method.py
jiuwenclaw/agentserver/tools/browser-move/src/openjiuwen_patch_sources/openjiuwen/core/workflow/components/llm/: questioner_comp.py
jiuwenclaw/agentserver/tools/browser-move/src/playwright_runtime/: agents.py  config.py  main.py  openjiuwen_monkeypatch.py  runtime.py  service.py
jiuwenclaw/agentserver/tools/browser-move/src/playwright_runtime/controllers/: action.py
jiuwenclaw/agentserver/tools/browser-move/src/playwright_runtime/drivers/: managed_browser.py
jiuwenclaw/channel/: __init__.py  base.py  feishu.py  web_channel.py  xiaoyi_channel.py
jiuwenclaw/evolution/: __init__.py  manager.py  schema.py  signal_detector.py  skill_call_operator.py  skill_optimizer.py
jiuwenclaw/gateway/: __init__.py  agent_client.py  agent_ws_server.py  channel_manager.py  heartbeat.py  message_handler.py
jiuwenclaw/resources/: .env.template
jiuwenclaw/schema/: message.py
jiuwenclaw/scripts/: generate-agent-folders.js  watch-folders.js
jiuwenclaw/web/: package-lock.json  package.json  vite.config.ts
jiuwenclaw/web/src/: App.tsx  index.css
jiuwenclaw/web/src/components/AgentPanel/: FileViewer.tsx  index.tsx
jiuwenclaw/web/src/components/BrowserPanel/: index.tsx
jiuwenclaw/web/src/components/ChannelsPanel/: ChannelsPanel.css  index.tsx
jiuwenclaw/web/src/components/ChatPanel/: InlineQuestionCard.tsx  InputArea.tsx  MessageItem.tsx  SubtaskProgress.tsx  ToolCallDisplay.tsx  ToolGroupDisplay.tsx  index.tsx
jiuwenclaw/web/src/components/ConfigPanel/: index.tsx
jiuwenclaw/web/src/components/HeartbeatPanel/: index.tsx
jiuwenclaw/web/src/components/LogsPanel/: index.tsx
jiuwenclaw/web/src/components/SessionSidebar/: OffloadFilesWidget.tsx  SessionItem.tsx  index.tsx
jiuwenclaw/web/src/components/SessionsPanel/: index.tsx
jiuwenclaw/web/src/components/SkillPanel/: index.tsx
jiuwenclaw/web/src/components/StatusBar/: index.tsx
jiuwenclaw/web/src/components/TodoList/: index.tsx
jiuwenclaw/web/src/components/ToolPanel/: ToolPanel.css  index.tsx
jiuwenclaw/web/src/features/HeartbeatMessageModal/: index.tsx
jiuwenclaw/web/src/features/SourceManagerModal/: index.tsx
jiuwenclaw/web/src/features/UserQuestionModal/: index.tsx
jiuwenclaw/web/src/hooks/: useSpeech.ts  useWebSocket.ts
jiuwenclaw/web/src/services/: webClient.ts
jiuwenclaw/web/src/stores/: chatStore.ts
jiuwenclaw/web/src/utils/: formatters.ts
workspace/: HEARTBEAT.md
workspace/agent/: SOUL.md
